# ocaml-jsonrpc-server

./: dune-project  server.key  server.pem
client/: app_client.ml  dune
generators/: .app_client.ml.swp  app_generators.ml  dune
idl/: .dune.swp  app_interface.ml  dune
server/: .dune.swp  app_server.ml  dune
